--- a/src/views/singlepost.jade
+++ b/src/views/singlepost.jade
@@ -4,7 +4,8 @@ html
 	head
 		title NYCDBxBSSA Basic Blog Single Page
 	body
-		h1 Welcome to a NYCDBxBSSA basic blog
+		a(href="/")
+			h1 Welcome to a NYCDBxBSSA basic blog
 		h2 Current blog post:
 		div(style="font-size: 14pt; font-weight: bold;")= post.title + " by author " + post.author
 		br
@@ -28,3 +29,16 @@ html
 		br
 		a(href="/manageusers") Manage Users
 		br
+		h2 Account
+		div You are currently logged in as:
+		if user != undefined
+			p= user
+			form(name="logout" action="/logout" method="post")
+				button(type="submit" id="logout" style="width: 400px;") Logout
+		else
+			form(name="login" action="/login" method="post")
+				input(type="text" name="username" style="width: 400px;" placeholder="Username")
+				br
+				input(type="password" name="userpass" style="width: 400px;" placeholder="Password")
+				br
+				button(type="submit" id="login" style="width: 400px;") Login
