--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -4,29 +4,39 @@ html
 	head
 		title NYCDBxBSSA Basic Blog App
 	body
-		a(href="/")
-			h1 Welcome to a NYCDBxBSSA basic blog
-		h2 Current blog posts:
-		div(id="Posts")
+		
+		div(id="header")
+			a(href="/")
+				h1 Welcome to a NYCDBxBSSA basic blog
+
+		div(id="main")
+			h2 Current blog posts:
+			div(id="Posts")
 			each post in allPosts
-				a(href="/singlepost/"+post.postID)
-					div(style="font-size: 14pt; font-weight: bold;")= post.title + " by author " + post.author
-				br
-		h2 Navigation
-		a(href="/manageposts") Manage Posts
-		br
-		a(href="/manageusers") Manage Users
-		br
-		h2 Account
-		div You are currently logged in as:
-		if user != undefined
-			p= user
-			form(name="logout" action="/logout" method="post")
-				button(type="submit" id="logout" style="width: 400px;") Logout
-		else
-			form(name="login" action="/login" method="post")
-				input(type="text" name="username" style="width: 400px;" placeholder="Username")
-				br
-				input(type="password" name="userpass" style="width: 400px;" placeholder="Password")
-				br
-				button(type="submit" id="login" style="width: 400px;") Login
+					a(href="/singlepost/"+post.postID)
+						div(style="font-size: 14pt; font-weight: bold;")= post.title + " by author " + post.author
+					br
+		
+		div(id="footer")
+			if user != undefined
+				div(id="accountinformation")
+					h2 Account
+					p You are currently logged in as:
+					p= user
+					form(name="logout" action="/logout" method="post")
+						button(type="submit" id="logout" style="width: 400px;") Logout
+				
+				div(id="navigation")
+					h2 Navigation
+					a(href="/manageposts") Manage Posts
+					br
+					a(href="/manageusers") Manage Users
+			else
+				div(id="loginform")
+					h2 Login
+					form(name="login" action="/login" method="post")
+						input(type="text" name="username" style="width: 400px;" placeholder="Username")
+						br
+						input(type="password" name="userpass" style="width: 400px;" placeholder="Password")
+						br
+						button(type="submit" id="login" style="width: 400px;") Login
