--- a/src/views/manageposts.jade
+++ b/src/views/manageposts.jade
@@ -5,41 +5,51 @@ html
 	head
 		title NYCDBxBSSA Basic Blog Manage Posts
 	body
-		a(href="/")
-			h1 Welcome to a NYCDBxBSSA basic blog
-		h2 Make a new post
 
-		form(name="newPost" action="/addpost" method="post")
-			input(type="hidden" name="postAuthor" value=userid)
-			input(type="text" name="postTitle" style="width: 400px;" placeholder="Title")
-			br
-			input(type="text" name="postBody" style="width: 400px;" placeholder="Text")
-			br
-			button(type="submit" id="submitPost" style="width: 400px;") Submit your post
+		div(id="header")
+			a(href="/")
+				h1 Welcome to a NYCDBxBSSA basic blog
+		
+		div(id="addpostForm")
+			h2 Make a new post
+			form(name="addPost" action="/addpost" method="post")
+				input(type="hidden" name="postAuthor" value=userid)
+				input(type="text" name="postTitle" style="width: 400px;" placeholder="Title")
+				br
+				input(type="text" name="postBody" style="width: 400px;" placeholder="Text")
+				br
+				button(type="submit" id="submitPost" style="width: 400px;") Submit your post
+		
+		div(id="manageposts")
+			h2 Here you can manage the posts
+			ul
+				each post in allPosts
+					a(href="/singlepost/"+post.postID)
+						div(style="font-size: 14pt; font-weight: bold;")= post.title + " by author " + post.author
+						a(href="/removepost/"+post.postID)
+							div xxx Remove this post
+					br
 
-		h2 Here you can manage the posts
-		ul
-			each post in allPosts
-				a(href="/singlepost/"+post.postID)
-					div(style="font-size: 14pt; font-weight: bold;")= post.title + " by author " + post.author
-					a(href="/removepost/"+post.postID)
-						div xxx Remove this post
-				br
-		h2 Navigation
-		a(href="/manageposts") Manage Posts
-		br
-		a(href="/manageusers") Manage Users
-		br
-		h2 Account
-		div You are currently logged in as:
-		if user != undefined
-			p= user
-			form(name="logout" action="/logout" method="post")
-				button(type="submit" id="logout" style="width: 400px;") Logout
-		else
-			form(name="login" action="/login" method="post")
-				input(type="text" name="username" style="width: 400px;" placeholder="Username")
-				br
-				input(type="password" name="userpass" style="width: 400px;" placeholder="Password")
-				br
-				button(type="submit" id="login" style="width: 400px;") Login
+		div(id="footer")
+			if user != undefined
+				div(id="accountinformation")
+					h2 Account
+					p You are currently logged in as:
+					p= user
+					form(name="logout" action="/logout" method="post")
+						button(type="submit" id="logout" style="width: 400px;") Logout
+				
+				div(id="navigation")
+					h2 Navigation
+					a(href="/manageposts") Manage Posts
+					br
+					a(href="/manageusers") Manage Users
+			else
+				div(id="loginform")
+					h2 Login
+					form(name="login" action="/login" method="post")
+						input(type="text" name="username" style="width: 400px;" placeholder="Username")
+						br
+						input(type="password" name="userpass" style="width: 400px;" placeholder="Password")
+						br
+						button(type="submit" id="login" style="width: 400px;") Login
