--- a/src/views/manageusers.jade
+++ b/src/views/manageusers.jade
@@ -21,13 +21,13 @@ html
 			div(id="adduserform")
 				h2 Add a new user
 				form(name="addUser" action="/adduser" method="post")
-					input(type="text" name="userName" style="width: 350px;" placeholder="Username")
+					input(type="text" name="userName" placeholder="Username")
 					br
-					input(type="text" name="userPassword" style="width: 350px;" placeholder="password")
+					input(type="text" name="userPassword" placeholder="password")
 					br
-					input(type="text" name="userEmail" style="width: 350px;" placeholder="Email")
+					input(type="text" name="userEmail" placeholder="Email")
 					br
-					button(type="submit" id="submitPost" style="width: 350px;") Add new user
+					button(type="submit" id="submitPost") Add new user
 		
 		div(id="footer")
 			
