--- a/src/views/css/basicBlog.css
+++ b/src/views/css/basicBlog.css
@@ -234,12 +234,23 @@
 #adduserform{
 	display: inline-block;
 	vertical-align: top;
+	width: 40%;
 	padding: 0px 50px 10px 50px;
+}
+
+#adduserform input{
+	width: 100%;
+	font-size: 13pt;
+}
+
+#adduserform button{
+	width: 100%;
+	font-size: 14pt;
 }
 
 #manageusers{
 	display: inline-block;
-	width: 30%;
+	width: 45%;
 	padding: 0px 0px 10px 50px;
 }
 
