--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,7 +1,7 @@
 doctype
 html
 	head
-		title NYCDBxBSSA Basic Blog App
+		title Main - NYCDBxBSSA Basic Blog App
 		link(rel='stylesheet' href='/css/basicBlog.css')
 	body
 		
