--- a/src/views/singlepost.jade
+++ b/src/views/singlepost.jade
@@ -1,7 +1,7 @@
-#doctype
+doctype
 html
 	head
-		title NYCDBxBSSA Basic Blog Single Page
+		title= post.title + " - NYCDBxBSSA Basic Blog"
 		link(rel='stylesheet' href='/css/basicBlog.css')
 	body
 		
