--- a/src/views/manageusers.jade
+++ b/src/views/manageusers.jade
@@ -1,7 +1,7 @@
 doctype
 html
 	head
-		title NYCDBxBSSA Basic Blog Manage Users
+		title Manage Users - NYCDBxBSSA Basic Blog
 		link(rel='stylesheet' href='/css/basicBlog.css')
 	body
 		div(id="header")
