--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -53,7 +53,7 @@ html
 				form(name="addUser" action="/adduser" method="post")
 					input(type="text" name="userName" placeholder="Username")
 					br
-					input(type="text" name="userPassword" placeholder="password")
+					input(type="password" name="userPassword" placeholder="password")
 					br
 					input(type="text" name="userEmail" placeholder="Email")
 					br
